--- a/images/index.css
+++ b/images/index.css
@@ -24,3 +24,55 @@
   color: var(--color-subinfo);
   font-size: 15px;
 }
+
+.image-slide__item {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.image-slide__item-thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+}
+
+.image-slide__item-thumbnail-cover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(58, 58, 58, 0.3);
+}
+
+.image-slide__item-info {
+  max-width: var(--max-content-width);
+  width: 100%;
+  position: absolute;
+  top: 128px;
+}
+
+.image-slide__item-title {
+  font-size: 50px;
+  color: white;
+}
+
+.image-slide__item-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  font-size: 16px;
+  font-weight: 300;
+  background-color: white;
+  color: black;
+  width: 160px;
+  height: 40px;
+  border-radius: 20px;
+}
+
+.image-slide__item-link:hover {
+  cursor: pointer;
+}
